<resources>
    <string name="app_name">진짜 금연</string>

    <!-- Admob -->
    <string name="admob_app_id">ca-app-pub-3924676263890790~2315907382</string>
    <string name="banner_ad_id">ca-app-pub-3924676263890790/8274811070</string>
    <string name="banner_ad_test_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Intro -->
    <string name="holding_it_in_well">잘 참고 계시죠..?</string>
    <string name="wait">잠시만 기다려주세요…</string>

    <!-- Registration -->
    <string name="date_select_text">금연을 시작한 날짜를 선택해주세요.</string>
    <string name="stop_smoking_start">금연 시작</string>
    <string name="nick_name">닉네임(등록 후 변경불가)</string>
    <string name="edit_nick_name">닉네임</string>
    <string name="resolution">각오</string>
    <string name="amount_of_smoking">하루 흡연량(개비)</string>
    <string name="tobacco_price">담배 가격(1갑)</string>
    <string name="user_widget">각오는 위젯에 사용됩니다.</string>

    <string name="message_nick_name">닉네임을 입력해주세요.</string>
    <string name="message_nick_name_length">닉네임은 최소 2자 최대 10자까지 입력할 수 있습니다.</string>
    <string name="message_amount_of_smoking">하루 흡연량을 입력해주세요.</string>
    <string name="message_amount_of_smoking_length">하루 흡연량은 최대 3자리까지 입력할 수 있습니다.</string>
    <string name="message_tobacco_price">담배 가격을 입력해주세요.</string>
    <string name="message_tobacco_price_length">담배 가격은 최대 6자리까지 입력할 수 있습니다.</string>
    <string name="message_my_resolution">금연하기 위한 각오를 입력해주세요.</string>
    <string name="message_my_resolution_length">금연하기 위한 각오는 최대 20자리까지 입력할 수 있습니다.</string>
    <string name="message_zero_input_exception">%s은 0보다 크게 입력해주세요.</string>
    <string name="message_input_space">공백은 입력할 수 없습니다.</string>
    <string name="message_length">최소 2자 이상 입력해주세요.</string>
    <string name="message_reduplication">중복된 닉네임이 있습니다. 다시 입력해주세요.</string>


    <!-- Main -->
    <string name="stop_smoking_label">금연 정보</string>
    <string name="share_label">주변에 금연 소식 알리기</string>
    <string name="main_top_start_label">에 시작했어요</string>
    <string name="main_top_label">금연한지</string>
    <string name="main_top_end_label">되었어요.</string>
    <string name="stop_smoking_d_day">%d일</string>
    <string name="main_title1">%s님 금연에 꼭 성공하세요!</string>
    <string name="main_title2">%s님 다시 피울 생각하는건 아니죠 ?</string>
    <string name="main_title3">%s님 지금처럼 참아봐요 할 수 있어요!</string>
    <string name="main_title4">%s님 피워봤자 좋은게 하나도 없어요..</string>
    <string name="main_title5">%s님! 다시 흡연자로 돌아가지 마세요.</string>
    <string name="main_save_tobacco">%d개비</string>
    <string name="the_amount_saved">아낀 금액</string>
    <string name="my_resolution">각오</string>
    <string name="un_smoked_cigarettes">안피운 담배</string>
    <string name="increased_lifespan">지켜낸 시간</string>
    <string name="chat">담소 나누기</string>
    <string name="stop_smoking_after_body_changes">금연 후 신체 변화</string>
    <string name="stop_smoking_share_friends">금연 시작 친구에게 공유하기</string>
    <string name="failed_get_data">데이터를 가져오지 못했습니다.</string>

    <string name="message_backward_finish">뒤로가기를 한번 더 실행하면 앱이 종료됩니다.</string>
    <string name="message_kakao_not_install">카카오톡이 설치되지 않거나 로그인하지 않은 경우\n해당 기능을 이용할 수 없습니다.</string>
    <string name="message_kakao_error">진행 중 예기치 못한 오류가 발생했습니다.</string>
    <string name="message_kakao_link_send_fail">카카오링크 보내기에 실패하였습니다.\n잠시 후 다시 시도해주세요.</string>


    <!-- BodyChanges Dialog -->
    <string name="body_changes_after_quitting_smoking">금연 후 신체변화</string>
    <string name="twenty_minutes">20분 경과</string>
    <string name="twenty_minutes_info">혈압이 정상으로 떨어지고 손과 발의 체온이 정상으로 돌아옵니다.</string>
    <string name="eight_hours">8시간 경과</string>
    <string name="eight_hours_info">혈중 일산화탄소량이 정상으로 떨어지고 혈중 산소량이 정상치로 올라갑니다.</string>
    <string name="twelve_hours">12시간 경과</string>
    <string name="twelve_hours_info">심장마비 위험이 감소합니다.</string>
    <string name="one_day">24시간 경과</string>
    <string name="one_day_info">흡연으로 인해 몸 안에 쌓였던 일산화탄소가 몸 밖으로 전부 배출되며 금단 증상이 나타나는 시간입니다.</string>
    <string name="two_day">48시간 경과</string>
    <string name="two_day_info">후각과 미각이 향상됩니다. 같은 음식을 먹더라도 색 다른 맛을 느낄 수 있습니다.</string>
    <string name="three_day">72시간 경과</string>
    <string name="three_day_info">체내 니코틴 잔량이 대부분 배출되며 폐의 회복이 시작됩니다. 금단 증상이 극에 달합니다.</string>
    <string name="one_week">1주 경과</string>
    <string name="one_week_info">가래의 점도와 색이 정상적으로 되돌아오며, 흡연에 대한 욕구는 여전히 남아있습니다.</string>
    <string name="two_week">2주 경과</string>
    <string name="two_week_info">잇몸, 치아 상태가 회복되며 흡연에 대한 욕구가 감소합니다.</string>
    <string name="one_two_month">1~2개월 경과</string>
    <string name="one_two_month_info">피부가 개선되며 폐 기능이 30%정도 향샹되어 체력이 증가합니다.</string>
    <string name="three_month">3개월 경과</string>
    <string name="three_month_info">남성의 경우 성 기능이 향상되며 정자 수가 증가됩니다.</string>
    <string name="nine_month">9개월 경과</string>
    <string name="nine_month_info">피로와 호흡 곤란 증상이 완화하며 호흡기 질환에 대한 면역력이 강화되고 폐가 정상 기능으로 회복됩니다.</string>
    <string name="one_year">1년 경과</string>
    <string name="one_year_info">혈액의 모든 세포가 정상화되며 심장병 발병률이 흡연자 절반으로 줄어듭니다.</string>
    <string name="five_year">5년 경과</string>
    <string name="five_year_info">자궁경부암, 뇌졸증, 중풍의 발병률이 비흡연자와 비슷한 수치로 떨어지며 신체 체중도 증가합니다.</string>
    <string name="ten_year">10년 경과</string>
    <string name="ten_year_info">폐암으로 인한 사망률이 흡연자 절반으로 떨어지며, 구강암, 후두암, 식도암 등 흡연으로 발생되는 주요 암들이 발병률이 감소합니다.</string>
    <string name="fifteen_year">15년 경과</string>
    <string name="fifteen_year_info">한번도 흡연하지 않은 사람과 같은 수준의 몸 상태로 회복합니다.</string>


    <!-- Community -->
    <string name="warning_description">타인을 비방, 비하, 욕설 게시물은 통보 없이 삭제될 수 있습니다.</string>
    <string name="write_post">글 쓰기</string>
    <string name="zero">0</string>
    <string name="no_data">등록 된 글이 없습니다.\n새로운 글을 작성해보세요.</string>
    <string name="fetched_all_data">데이터를 모두 가져왔습니다.</string>

    <!-- CommunityDetail -->
    <string name="from_writer">%s님이 작성한 글입니다.</string>
    <string name="from_writer_me">내가 작성한 글입니다.</string>
    <string name="input_comment">내용을 입력해주세요.</string>
    <string name="comment_failure">댓글이 등록되지 않았습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="comment_delete_success">댓글이 삭제되었습니다.</string>
    <string name="comment_delete_failure">댓글이 삭제되지 않았습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="no_comment">댓글이 없습니다.</string>

    <!-- Write -->
    <string name="shared_no_smoking_story">금연 성공담, 실패담 등등 이야기를 다른 사람들과 공유해보세요.</string>
    <string name="input_title">제목을 입력해주세요.</string>
    <string name="input_contents">내용을 입력해주세요.(최대 150자)</string>
    <string name="set_up_category">카테고리를 설정해주세요.</string>
    <string name="post_warning">문제가 될 수 있는 글은 예고없이 삭제될 수 있습니다.</string>

    <string name="message_upload_success">업로드 성공</string>
    <string name="message_upload_fail">업로드 실패\n잠시 후 다시 시도해주세요.</string>
    <string name="message_one_letter_or_more">%s은 최소 %d자 이상 입력해주세요.</string>

    <!-- Default -->
    <string name="check">확인</string>
    <string name="register">등록</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="error">예기치 못한 오류가 발생했습니다. 잠시 후 다시 시도해주세요.</string>

</resources>